feat: reveal quiz round results
